--- a/data/appointments.json
+++ b/data/appointments.json
@@ -87,7 +87,7 @@
         "reason": "i AM NOT OKAY DR",
         "notes": "",
         "patientName": "John Doe",
-        "status": "rescheduled"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfa2b72f9230.87743464",
@@ -102,7 +102,7 @@
         "reason": "I need ur help",
         "notes": "",
         "patientName": "John Doe",
-        "status": "rescheduled"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfa68ba6b761.34870075",
@@ -117,7 +117,7 @@
         "reason": "dfwsfgfgfgfg",
         "notes": "",
         "patientName": "John Doe",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfa6e241d639.70895705",
@@ -132,7 +132,7 @@
         "reason": "dsdgsfgfgsfg",
         "notes": "",
         "patientName": "John Doe",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfa795aaea27.42442455",
@@ -147,7 +147,7 @@
         "reason": "xvsdvfgsfgsf",
         "notes": "",
         "patientName": "PIRANOCK HARVEY",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfa828281e78.77790766",
@@ -162,7 +162,7 @@
         "reason": "fxfxhrxmxh",
         "notes": "",
         "patientName": "John Doe",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfaaea039041.72639027",
@@ -177,7 +177,7 @@
         "reason": "i AM NOT OKAY DR",
         "notes": "",
         "patientName": "John Doe",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfabafbe7067.62046692",
@@ -192,7 +192,7 @@
         "reason": "i AM NOT OKAY DR",
         "notes": "",
         "patientName": "John Doe",
-        "status": "approved"
+        "status": "canceled"
     },
     {
         "id": "appt_68dfac07be9483.56858510",
@@ -202,10 +202,146 @@
         "doctorName": "Dr. Sarah Johnson",
         "doctorSpecialty": "Cardiology",
         "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/2",
-        "date": "2025-11-06",
-        "time": "10:30",
+        "date": "2025-11-18",
+        "time": "11:30",
         "reason": "fxfxhrxmxh",
         "notes": "",
-        "patientName": "John Doe"
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e35edc3012b4.84324552",
+        "createdAt": "2025-10-06T08:17:00+02:00",
+        "department": "Dermatology",
+        "doctorId": "derm-1",
+        "doctorName": "Dr. Aisha Patel",
+        "doctorSpecialty": "Dermatology",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/4",
+        "date": "2025-10-16",
+        "time": "14:45",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e39fb27e3ff7.28392343",
+        "createdAt": "2025-10-06T12:53:38+02:00",
+        "department": "General Medicine",
+        "doctorId": "gm-1",
+        "doctorName": "Dr. Michael Chen",
+        "doctorSpecialty": "General Medicine",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/3",
+        "date": "2025-10-16",
+        "time": "09:00",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3a1c4084542.09081420",
+        "createdAt": "2025-10-06T13:02:28+02:00",
+        "department": "Ophthalmology",
+        "doctorId": "oph-1",
+        "doctorName": "Dr. Elena Novak",
+        "doctorSpecialty": "Ophthalmology",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/5",
+        "date": "2025-10-23",
+        "time": "11:15",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3a67be75323.65633136",
+        "createdAt": "2025-10-06T13:22:35+02:00",
+        "department": "Cardiology",
+        "doctorId": "cardio-1",
+        "doctorName": "Dr. Sarah Johnson",
+        "doctorSpecialty": "Cardiology",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/2",
+        "date": "2025-10-23",
+        "time": "09:00",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3a6a371c5f0.65878420",
+        "createdAt": "2025-10-06T13:23:15+02:00",
+        "department": "Cardiology",
+        "doctorId": "cardio-1",
+        "doctorName": "Dr. Sarah Johnson",
+        "doctorSpecialty": "Cardiology",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/2",
+        "date": "2025-10-30",
+        "time": "11:15",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3aaba8073a9.35791092",
+        "createdAt": "2025-10-06T13:40:42+02:00",
+        "department": "General Medicine",
+        "doctorId": "gm-1",
+        "doctorName": "Dr. Michael Chen",
+        "doctorSpecialty": "General Medicine",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/3",
+        "date": "2025-10-22",
+        "time": "09:00",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3abb35de190.53419038",
+        "createdAt": "2025-10-06T13:44:51+02:00",
+        "department": "General Medicine",
+        "doctorId": "gm-1",
+        "doctorName": "Dr. Michael Chen",
+        "doctorSpecialty": "General Medicine",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/3",
+        "date": "2025-10-16",
+        "time": "09:00",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3b1da852780.83295869",
+        "createdAt": "2025-10-06T14:11:06+02:00",
+        "department": "Pediatrics",
+        "doctorId": "ped-1",
+        "doctorName": "Dr. Emily Carter",
+        "doctorSpecialty": "Pediatrics",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/7",
+        "date": "2025-10-23",
+        "time": "09:00",
+        "reason": "I am having a general body pain",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
+    },
+    {
+        "id": "appt_68e3b3e0acbe69.35557251",
+        "createdAt": "2025-10-06T14:19:44+02:00",
+        "department": "Cardiology",
+        "doctorId": "cardio-1",
+        "doctorName": "Dr. Sarah Johnson",
+        "doctorSpecialty": "Cardiology",
+        "doctorPhoto": "http:\/\/static.photos\/people\/200x200\/2",
+        "date": "2025-10-23",
+        "time": "09:00",
+        "reason": "",
+        "notes": "",
+        "patientName": "John Doe",
+        "status": "canceled"
     }
 ]
